# ben-tanen.github.io

./: .env  .gitignore  .jekyll-metadata  .sync-meta.json  404.md  CNAME  Makefile  README.md  ReadMe.md  _config.yml  about.md  bio.html  feed.xml  index-old.html  index.html  index2.html  old.html  readme.md  resume.html  style.css  update-landing-proj-order.py
_data/: ye-favorites-2017.yml  ye-favorites-2023.yml  ye-favorites-2024.yml  ye-favorites-2025.yml
_drafts/: 2015-06-31-retro-python-games.markdown  2015-07-01-gallery-test.markdown  2016-06-02-introducing-nhl-projections.markdown  2016-09-28-column-test.markdown  2016-10-12-more-on-nhl-projections.markdown  2017-01-24-tv-monitor.markdown  2017-06-14-sports-dynasties-sample.markdown  2017-08-05-animating-dark-side-of-the-moon.md  2017-08-05-automating-spotify.md  2017-08-05-designing-street-signs.md  2017-08-05-learning-as-a-developer.md  2017-08-05-personal-musical-discovery.md  2018-04-21-spotify-playlist-clustering.md  2018-06-01-mvp-congress-p1.md  2019-04-03-most-font.md  2019-04-03-processing-fun.md  2020-01-05-ibm-watson-ff.md  2020-01-08-ibm-watson-ff.md  2020-02-09-oscars-best-picture.md  2020-02-10-oscars-best-picture.md  2020-04-12-spotify-automation-utils.md  2020-05-09-running-covid19.md  (+6 more)
_env/notion_bridge/: backfill.py  cli.py  config.py  config.yml  images.py  jekyll.py  notion_api.py  pyproject.toml  sync.py  sync_meta.py  transforms.py
_env/notion_bridge/tests/: conftest.py  test_api_snapshot.py  test_transforms.py
_env/notion_bridge/tests/fixtures/: notion_test_page_snapshot.md
(+908 files in other folders)
