[project]
name = "notion-bridge"
version = "0.1.0"
description = "Notion CMS bridge for ben-tanen.github.io"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.10.2",
    "notion-client>=2.0.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
